YT-17470: don't use Guava